Add GPA level code
